# motion-detector-rs

./: .gitignore  Cargo.toml
src/: main.rs  ops.rs
